syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.examples.history";
option java_outer_classname = "TransferServiceImpl";

package history;

service HistoryService {

	rpc displayTransaction(DisplayRequest) returns (stream DisplayResponse) {}
	
	rpc recentTransactions(stream RecentRequest) returns (RecentResponse) {}

}
	
message DisplayRequest{ //user -> 1 to 10 server -> transnumber: 1, amount: 240£, 2 amount 300
	int32 transactionIdStart = 1;
	int32 transactionIdEnd = 2;
}

message DisplayResponse {
	int32 transactionId = 1;
	float transactionAmount = 2;
}

message RecentRequest { //user -> 1,3,4,6 server -> total value: 230£ // Random num to gen
	int32 numberId = 1;
}

message RecentResponse{ 
	float transactionValue = 1;
}

